@@ -1,6 +1,11 @@
 
 == ChangeLog (Coova Chilli current svn revision) ==
 
+* Renamed packed network stack structures and put them in pkt.h
+* Bug fix for DHCP relay (RFC 1542)
+* Bug fix in IPC handling
+* Memory leak fix in logging
+	
 == ChangeLog (Coova Chilli v1.0.9 svn revision 133) ==
 
 * Bug fix whereby the mac address of packets from the chilli redirect are overwritten	
